--- a/page_principale.css
+++ b/page_principale.css
@@ -47,11 +47,13 @@ div.elem2 {
 }
 
 #recipes {
+    background-color: #ffddcc;
     border-radius: 15px;
     border: 2px solid #000000;
     float: left;
     position: relative;
-    margin-left: 20%;
+    margin-left: 18%;
+    margin-right: 4%;
     padding-right: 4%;
 }
 
