--- a/page_principale.css
+++ b/page_principale.css
@@ -41,7 +41,7 @@ div.elem2 {
 #menu {
     border-width: 5px;
     border-style: double;
-    margin-right: 23cm;
+    margin-right: 10%;
     float: left;
     position:absolute;
 }
@@ -50,15 +50,44 @@ div.elem2 {
     background-color: #ffddcc;
     border-radius: 15px;
     border: 2px solid #000000;
-    float: left;
     position: relative;
-    margin-left: 18%;
+    left: 0px;
+    top: 0px;
+    z-index: 10;
+    margin-top: 15px;
+    margin-left: 22%;
     margin-right: 4%;
     padding-right: 4%;
 }
 
 #menu_pres {
     padding: 1px 3px 1px 3px;
+}
+
+#research_bar {
+    background-color: #ffccaa;
+    display: inline-block;
+    width: 40%;
+    padding : 1%;
+    box-shadow: 4px 5px black;
+    border-radius: 4px;
+}
+
+#session_bar {
+    background-color: #aaccff;
+    display: inline-block;
+    position: relative;
+    float: right;
+    z-index: 10000;
+    width: 25%;
+    padding: 0.8% 1% 1% 1%;
+    box-shadow: 4px 5px black;
+    border-radius: 4px;
+    text-align: right;
+}
+
+#user_recipes_list {
+    position: relative;
 }
 
 a {
