Completed "favourite recipes tab" Use Case

--- a/page_principale.css
+++ b/page_principale.css
@@ -11,11 +11,19 @@ div.elem_init {
     padding: 3px;
 }
 
+div.elem_init:hover {
+    background-color: rgba(200, 200, 200, 0.6);
+}
+
 div.elem0 {
     background-color: #777777;
     border-top-style: solid;
     border-top-width: 1px;
     padding: 3px;
+}
+
+div.elem0:hover {
+    background-color: rgba(200, 200, 200, 0.6);
 }
 
 div.elem1 {
@@ -25,11 +33,19 @@ div.elem1 {
     padding: 3px;
 }
 
+div.elem1:hover {
+    background-color: rgba(200, 200, 200, 0.6);
+}
+
 div.elem2 {
     background-color: #999999;
     border-top-style: solid;
     border-top-width: 1px;
     padding: 3px;
+}
+
+div.elem2:hover {
+    background-color: rgba(200, 200, 200, 0.6);
 }
 
 #menu_pres {
@@ -53,21 +69,13 @@ div.elem2 {
 #recipes {
     background-color: #333333;
     border-radius: 15px;
-<<<<<<< HEAD
     border: 2px solid #FFFFFF;
-=======
-    border: 2px solid #000000;
->>>>>>> 6525fe2dc8b2cd4c379f00bf138642483fd85556
     position: relative;
     left: 0px;
     top: 0px;
     z-index: 10;
     margin-top: 15px;
-<<<<<<< HEAD
     margin-left: 27%;
-=======
-    margin-left: 22%;
->>>>>>> 6525fe2dc8b2cd4c379f00bf138642483fd85556
     margin-right: 4%;
     padding-right: 4%;
 }
@@ -77,45 +85,30 @@ div.elem2 {
 }
 
 #research_bar {
-<<<<<<< HEAD
     background-color: #404040;
-=======
-    background-color: #ffccaa;
->>>>>>> 6525fe2dc8b2cd4c379f00bf138642483fd85556
     display: inline-block;
     width: 40%;
     padding : 1%;
-    box-shadow: 4px 5px black;
-<<<<<<< HEAD
+    box-shadow: 4px 5px lightgrey;
     border-radius: 8px;
     border: 2px solid #FFFFFF;
 }
 
 #session_bar {
     background-color: #404040;
-=======
     border-radius: 4px;
 }
 
 #session_bar {
-    background-color: #aaccff;
->>>>>>> 6525fe2dc8b2cd4c379f00bf138642483fd85556
     display: inline-block;
     position: relative;
     float: right;
     z-index: 10000;
-<<<<<<< HEAD
     width: 40%;
     padding: 0.8% 1% 1% 1%;
-    box-shadow: 4px 5px black;
+    box-shadow: 4px 5px lightgrey;
     border-radius: 8px;
     border: 2px solid #FFFFFF;
-=======
-    width: 25%;
-    padding: 0.8% 1% 1% 1%;
-    box-shadow: 4px 5px black;
-    border-radius: 4px;
->>>>>>> 6525fe2dc8b2cd4c379f00bf138642483fd85556
     text-align: right;
 }
 
@@ -123,7 +116,6 @@ div.elem2 {
     position: relative;
 }
 
-<<<<<<< HEAD
 #user_recipe_single {
     border-style: solid;
     border-width: 1px;
@@ -148,8 +140,10 @@ div.elem2 {
     cursor: pointer;
 }
 
-=======
->>>>>>> 6525fe2dc8b2cd4c379f00bf138642483fd85556
+#add_recipe_fav:hover {
+    text-shadow: 2px 0 0 #777, -2px 0 0 #777, 0 2px 0 #777, 0 -2px 0 #777, 2px 2px #777, -2px -2px 0 #777, 2px -2px 0 #777, -2px 2px 0 #777;
+}
+
 a {
     text-decoration: none;
     color: black;
