--- a/page_principale.css
+++ b/page_principale.css
@@ -1,36 +1,56 @@
 body {
-    background-color: #ffffcc;
+    background-color: #000000;
+    color:white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 div.elem_init {
-    background-color: #66ccff;
+    background-color: #666666;
     border-top-style: solid;
     border-top-width: 2px;
     padding: 3px;
 }
 
+div.elem_init:hover {
+    background-color: rgba(200, 200, 200, 0.6);
+}
+
 div.elem0 {
-    background-color: #ff9966;
+    background-color: #777777;
     border-top-style: solid;
     border-top-width: 1px;
     padding: 3px;
+}
+
+div.elem0:hover {
+    background-color: rgba(200, 200, 200, 0.6);
 }
 
 div.elem1 {
-    background-color: #99ff99;
+    background-color: #888888;
     border-top-style: solid;
     border-top-width: 1px;
     padding: 3px;
+}
+
+div.elem1:hover {
+    background-color: rgba(200, 200, 200, 0.6);
 }
 
 div.elem2 {
-    background-color: #ff99ff;
+    background-color: #999999;
     border-top-style: solid;
     border-top-width: 1px;
     padding: 3px;
 }
 
+div.elem2:hover {
+    background-color: rgba(200, 200, 200, 0.6);
+}
+
+#menu_pres {
+    text-align: center;
+}
 
 #recipe_separator {
     border-top-style: solid;
@@ -41,24 +61,87 @@ div.elem2 {
 #menu {
     border-width: 5px;
     border-style: double;
-    margin-right: 23cm;
+    margin-right: 10%;
     float: left;
     position:absolute;
 }
 
 #recipes {
-    background-color: #ffddcc;
+    background-color: #333333;
     border-radius: 15px;
-    border: 2px solid #000000;
-    float: left;
+    border: 2px solid #FFFFFF;
     position: relative;
-    margin-left: 18%;
+    left: 0px;
+    top: 0px;
+    z-index: 10;
+    margin-top: 15px;
+    margin-left: 27%;
     margin-right: 4%;
     padding-right: 4%;
 }
 
 #menu_pres {
     padding: 1px 3px 1px 3px;
+}
+
+#research_bar {
+    background-color: #404040;
+    display: inline-block;
+    width: 40%;
+    padding : 1%;
+    box-shadow: 4px 5px lightgrey;
+    border-radius: 8px;
+    border: 2px solid #FFFFFF;
+}
+
+#session_bar {
+    background-color: #404040;
+    border-radius: 4px;
+}
+
+#session_bar {
+    display: inline-block;
+    position: relative;
+    float: right;
+    z-index: 10000;
+    width: 40%;
+    padding: 0.8% 1% 1% 1%;
+    box-shadow: 4px 5px lightgrey;
+    border-radius: 8px;
+    border: 2px solid #FFFFFF;
+    text-align: right;
+}
+
+#user_recipes_list {
+    position: relative;
+}
+
+#user_recipe_single {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 15px;
+    text-align: center;
+    width: 100%;
+    padding: 3px 30px 3px 30px;
+}
+
+#user_recipe_single:hover {
+    background-color:#aa0000;
+    padding:3px 35px 6px 35px;
+    cursor: pointer;
+}
+
+#allUsrRecipes {
+    font-weight:bold;
+}
+
+#allUsrRecipes:hover {
+    color:#cc0000;
+    cursor: pointer;
+}
+
+#add_recipe_fav:hover {
+    text-shadow: 2px 0 0 #777, -2px 0 0 #777, 0 2px 0 #777, 0 -2px 0 #777, 2px 2px #777, -2px -2px 0 #777, 2px -2px 0 #777, -2px 2px 0 #777;
 }
 
 a {
